<resources>
    <string name="app_name">Apollo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="save_house">Save House</string>
    <string name="terms_of_service">By continuing you accept our   Terms Of Service</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="houses">Houses</string>
    <string name="your_houses">Your Houses</string>
    <string name="communicate">Communicate</string>
    <string name="register_now">Register Now</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_user_name">Your User Name</string>
    <string name="your_email_address">Your Email Address</string>
</resources>
